TestCases/Errors/range_value/observations/spr_03_obs.spm
"obs" "6-16" "0.00552424862494309"
"obs" "7-16" "0.00424778761061947"
"error_value" "6-16" "0"
"error_value" "7-16" "0"
